--- a/imc/style.css
+++ b/imc/style.css
@@ -6,8 +6,16 @@ main {
     align-items: center;
 }
 
-header {
-
+.container {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb( 70, 142, 236);
+    width: 400px;
+    height: 600px;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #000;
 }
 
 section {
