--- a/imc/style.css
+++ b/imc/style.css
@@ -18,6 +18,13 @@ main {
     box-shadow: 0 0 10px #000;
 }
 
-section {
-    
+.title {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    font: bold 2.5rem serif;
+    border-bottom: solid 5px #000;
+    margin-bottom: 20px;
 }
