--- a/imc/style.css
+++ b/imc/style.css
@@ -28,3 +28,11 @@ main {
     border-bottom: solid 5px #000;
     margin-bottom: 20px;
 }
+
+.input {
+    display: flex;
+    width: 300px;
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
+}
