--- a/imc/style.css
+++ b/imc/style.css
@@ -50,3 +50,14 @@ main {
 .input label {
     font: bold 1.5rem serif;
 }
+
+button {
+    width: 300px;
+    height: 40px;
+    font: bold 1.2rem serif;
+    background: #000;
+    color: rgb( 70, 142, 236);
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
