--- a/imc/style.css
+++ b/imc/style.css
@@ -61,3 +61,19 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.result {
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    width: 300px;
+    height: 150px;
+    border-radius: 5px;
+    font: italic 1.5rem serif;
+    box-shadow: 0px 0px 10px #000;
+    background: #000;
+    color: rgb( 70, 142, 236);
+    padding: 20px;
+    box-sizing: border-box;
+    user-select: none;
+}
