estilizando menu-area

--- a/menuNavegacoes/style.css
+++ b/menuNavegacoes/style.css
@@ -17,3 +17,12 @@ aside {
     margin-top: 10px;
     margin-right: 10px;
 }
+
+#menu-area {
+    width: 200px;
+    height: 100vh;
+    background-color: #CCC;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all ease .5s;
+}
