--- a/menuNavegacoes/style.css
+++ b/menuNavegacoes/style.css
@@ -26,3 +26,19 @@ aside {
     overflow-y: auto;
     transition: all ease .5s;
 }
+
+#menu-area ul, #menu-area li {
+    padding: 0;
+    list-style: none;
+}
+
+#menu-area li {
+    display: block;
+    padding: 10px;
+    color: #555;
+    cursor: pointer;
+}
+
+#menu-area li:hover {
+    background: #DDD;
+}
