--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -3,3 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-image: url(./img/back.jpg);
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    font-family: "Open Sans", sans-serif;
+}
