--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -11,3 +11,10 @@ body {
     height: 100vh;
     font-family: "Open Sans", sans-serif;
 }
+
+.container {
+    background-color: #ffffff;
+    width: 90vw;
+    height: 100px;
+    margin: 0 auto;
+}
