--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -12,6 +12,15 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+.title {
+    color: #ffcc00;
+    margin: 20vh auto;
+    font-size: calc(5vw + 20px);
+    text-shadow: 0 0 10px #000000,
+                 0 0 10px #000000,
+                 0 0 10px #000000;
+}
+
 .container {
     background-color: #ffffff;
     width: 90vw;
