--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -31,4 +31,7 @@ main {
     width: 90vw;
     height: 100px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
