--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -1,15 +1,15 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
     background-image: url(./img/back.jpg);
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
     font-family: "Open Sans", sans-serif;
+    height: 100vh;
+    width: 100vw;
 }
 
 main {
@@ -27,11 +27,13 @@ main {
 }
 
 .container {
+    align-items: center;
     background-color: #ffffff;
-    width: 90vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     height: 100px;
     margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    width: 90vw;
 }
+
