--- a/drumKit/style.css
+++ b/drumKit/style.css
@@ -31,9 +31,24 @@ main {
     background-color: #ffffff;
     display: flex;
     flex-wrap: wrap;
+    gap: 15px;
     justify-content: space-around;
     height: 100px;
     margin: 0 auto;
     width: 90vw;
+}
+
+.key {
+    align-items: center;
+    background-color: #000000BB;
+    border: 3px solid #ffffff;
+    color: #ffffff;
+    cursor: pointer; 
+    display: flex;
+    font-size: calc(3vw + 20px);
+    height: 100px;
+    justify-content: center;
+    user-select: none;
+    width: 100px;
 }
 
