--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -15,6 +15,19 @@ body {
     background-color: #00000090;
 }
 
+.display {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100px;
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #000000;
+    color: #ffffff;
+    font: normal 4rem serif;
+    overflow: hidden;
+}
+
 .calculator-buttons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
