--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -33,3 +33,13 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
 }
+
+.calculator button {
+    background-color: #00000099;
+    color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    outline: none;
+    cursor: pointer;
+}
